# pdf-fix-tuc

./: .dir-locals.el  .gitignore  LICENSE  Makefile.am  Readme.ja.md  Readme.md  configure.ac
src/: .gitignore  Makefile.am  build_table.py  cmdlineparse.hh  main.cc  pdf-handler.cc  pdf-handler.hh  regex_dispatcher_m.hh  tounicode.cc  tounicode.hh  tounicode_table.cc
test/: Makefile.am  SourceHanSerif-Regular-UTF16  bfchar-qdfcontents.txt  bfchar.tex  bfrange-expected.txt  bfrange-garbled.txt  bfrange-qdfcontents.txt  bfrange2-qdfcontents.txt  build_bfrange.py  build_bfrange2.py  test-pdftotext.sh  test-qdfcontents.sh
